samples/raylib.h

// Wave type, defines audio wave data
typedef struct Wave
{
    unsigned int sampleCount; // Number of samples
    unsigned int sampleRate;  // Frequency (samples per second)
    unsigned int sampleSize;  // Bit depth (bits per sample): 8, 16, 32 (24 not supported)
    unsigned int channels;    // Number of channels (1-mono, 2-stereo)
    void *data;               // Buffer data pointer
} Wave;
// Sound source type
typedef struct Sound
{
    void *audioBuffer; // Pointer to internal data used by the audio system

    unsigned int source; // Audio source id
    unsigned int buffer; // Audio buffer id
    int format;          // Audio format specifier
} Sound;
// Music type (file streaming from memory)
// NOTE: Anything longer than ~10 seconds should be streamed
typedef struct MusicData *Music;
// Audio stream type
// NOTE: Useful to create custom audio streams not bound to a specific file
typedef struct AudioStream
{
    unsigned int sampleRate; // Frequency (samples per second)
    unsigned int sampleSize; // Bit depth (bits per sample): 8, 16, 32 (24 not supported)
    unsigned int channels;   // Number of channels (1-mono, 2-stereo)

    void *audioBuffer; // Pointer to internal data used by the audio system.

    int format;              // Audio format specifier
    unsigned int source;     // Audio source id
    unsigned int buffers[2]; // Audio buffers (double buffering)
} AudioStream;
// Head-Mounted-Display device parameters
typedef struct VrDeviceInfo
{
    int hResolution;               // HMD horizontal resolution in pixels
    int vResolution;               // HMD vertical resolution in pixels
    float hScreenSize;             // HMD horizontal size in meters
    float vScreenSize;             // HMD vertical size in meters
    float vScreenCenter;           // HMD screen center in meters
    float eyeToScreenDistance;     // HMD distance between eye and display in meters
    float lensSeparationDistance;  // HMD lens separation distance in meters
    float interpupillaryDistance;  // HMD IPD (distance between pupils) in meters
    float lensDistortionValues[4]; // HMD lens distortion constant parameters
    float chromaAbCorrection[4];   // HMD chromatic aberration correction parameters
} VrDeviceInfo;
//----------------------------------------------------------------------------------
// Enumerators Definition
//----------------------------------------------------------------------------------
// System config flags
// NOTE: Used for bit masks
typedef enum
{
    FLAG_SHOW_LOGO = 1,           // Set to show raylib logo at startup
    FLAG_FULLSCREEN_MODE = 2,     // Set to run program in fullscreen
    FLAG_WINDOW_RESIZABLE = 4,    // Set to allow resizable window
    FLAG_WINDOW_UNDECORATED = 8,  // Set to disable window decoration (frame and buttons)
    FLAG_WINDOW_TRANSPARENT = 16, // Set to allow transparent window
    FLAG_WINDOW_HIDDEN = 128,     // Set to create the window initially hidden
    FLAG_MSAA_4X_HINT = 32,       // Set to try enabling MSAA 4X
    FLAG_VSYNC_HINT = 64          // Set to try enabling V-Sync on GPU
} ConfigFlag;
// Trace log type
typedef enum
{
    LOG_ALL = 0, // Display all logs
    LOG_TRACE,
    LOG_DEBUG,
    LOG_INFO,
    LOG_WARNING,
    LOG_ERROR,
    LOG_FATAL,
    LOG_NONE // Disable logging
} TraceLogType;